--- a/level-1/index.html
+++ b/level-1/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="main.css">
 </head>
-<body>
-  
-  <h1 id="hello">반갑습니다</h1>
-  <h1 id="hi">JS 기초</h1>
 
-  <script>
-    document.getElementById('hello').innerHTML = '반갑';
-    document.getElementById('hello').style.color = 'red';
-    document.getElementById('hello').style.fontSize = '16px';
-    document.getElementById('hi').innerHTML = 'JS 중급';
-  </script>
+<body>
+
+  <div class="alert-box" id="alert">
+    알림창
+    <button onclick="document.getElementById('alert').style.display = 
+  'none';">닫기</button>
+  </div>
+  <button onclick="document.getElementById('alert').style.display = 
+  'block';">버튼</button>
 
 </body>
+
 </html>
