--- a/level-1/index.html
+++ b/level-1/index.html
@@ -1,52 +1,46 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="main.css">
-</head>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="main.css" rel="stylesheet">
 
-<body>
+    <title>Hello, world!</title>
+  </head>
+  <body>
 
-  <div class="alert-box" id="alert">
-    <p class="title">알림창</p>
-    <button id="close">닫기</button>
-  </div>
+    <nav class="navbar navbar-light bg-light">
+      <div class="container-fluid">
+        <span class="navbar-brand">Navbar</span>
+        <button class="navbar-toggler" type="button">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
+    
+    <ul class="list-group">
+      <li class="list-group-item">An item</li>
+      <li class="list-group-item">A second item</li>
+      <li class="list-group-item">A third item</li>
+      <li class="list-group-item">A fourth item</li>
+      <li class="list-group-item">And a fifth one</li>
+    </ul>
 
-  <button onclick="id_Alert('아이디 :')">버튼1</button>
-  <button onclick="id_Alert('비밀번호 :')">버튼2</button>
-
-  <script>
-
-    document.getElementById('close').addEventListener('click', function(){
-      document.getElementById('alert').style.display = 'none';
-    });
-
-    function openAlert(a1){
-      document.getElementById('alert').style.display = a1;
-    }
-
-    function id_Alert(a2) {
-      document.getElementsByClassName('title')[0].innerHTML = a2;
-      document.getElementById('alert').style.display = 'block';
-    }
+    <script>
 
 
+      document.querySelector('.navbar-toggler').addEventListener('click', function(){
+        document.querySelectorAll('.list-group')[0].classList.toggle('show');
+      })
 
-    // function password_Alert() {
-    //   document.getElementById('title').innerHTML = '비밀번호 : ';
-    //   document.getElementById('alert').style.display = 'block';
-    // }
+    </script>
 
-    // function closeAlert(){
-    //   document.getElementById('alert').style.display = 'none';
-    // }
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-  </script>
 
-</body>
-
+  </body>
 </html>
