--- a/level-1/index.html
+++ b/level-1/index.html
@@ -9,9 +9,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="main.css" rel="stylesheet">
 
+    <script
+     src="https://code.jquery.com/jquery-3.6.0.min.js"
+     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+     crossorigin="anonymous">
+    </script>
+
     <title>Hello, world!</title>
   </head>
   <body>
+
+    <div class="black-bg">
+      <div class="white-bg">
+        <h4>로그인하세요</h4>
+        <button class="btn btn-danger" id="close">닫기</button>
+      </div>
+    </div> 
 
     <nav class="navbar navbar-light bg-light">
       <div class="container-fluid">
@@ -30,7 +43,18 @@
       <li class="list-group-item">And a fifth one</li>
     </ul>
 
+    <button id="login">로그인</button>
+
     <script>
+
+      $('#login').on('click', function(){
+        $('.black-bg').addClass('show-modal');
+      })
+      // 닫기 버튼을 누르면 모달창이 꺼짐
+      $('#close').on('click', function(){
+        $('.black-bg').hide();
+      })
+
 
 
       document.querySelector('.navbar-toggler').addEventListener('click', function(){
@@ -40,7 +64,7 @@
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+    
 
   </body>
 </html>
