--- a/level-1/index.html
+++ b/level-1/index.html
@@ -22,9 +22,40 @@
     <div class="black-bg">
       <div class="white-bg">
         <h4>로그인하세요</h4>
-        <button class="btn btn-danger" id="close">닫기</button>
+
+        <form action="success.html">
+          <div class="my-3">
+            <input type="text" class="form-control" id="email">
+           </div>
+           <div class="my-3">
+             <input type="password" class="form-control">
+           </div>
+           <button type="submit" class="btn btn-primary" id="send">전송</button>
+           <button type="button" class="btn btn-danger" id="close">닫기</button>
+        </form> 
+
       </div>
-    </div> 
+    </div>
+
+    <script>
+
+      if (1 == 3) {
+        console.log("맞아요");
+      } else if (3 == 4){
+        console.log("틀려요");
+      } else {
+        console.log("끝나요");
+      }
+
+      $('#send').on('click', function(e){
+        if (document.getElementById('email').value == '') {
+          alert('아이디, 비밀번호 입력해주세요')
+          e.preventDefault();
+        }
+      });
+
+    </script>
+
 
     <nav class="navbar navbar-light bg-light">
       <div class="container-fluid">
@@ -42,15 +73,18 @@
       <li class="list-group-item">A fourth item</li>
       <li class="list-group-item">And a fifth one</li>
     </ul>
-
-    <button id="login">로그인</button>
+    <div class="main-gb">
+      <h4>Shirts on Sale</h4>
+      <button id="login" class="btn btn-danger">로그인</button>
+    </div>
+    
 
     <script>
 
       $('#login').on('click', function(){
         $('.black-bg').addClass('show-modal');
       })
-      // 닫기 버튼을 누르면 모달창이 꺼짐
+
       $('#close').on('click', function(){
         $('.black-bg').hide();
       })
