--- a/level-1(again)/project1/index.html
+++ b/level-1(again)/project1/index.html
@@ -5,19 +5,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="../project1/main.css" rel="stylesheet">
 </head>
 <body>
 
-  <h1 id="hello">안녕하세요</h1>
-  <h1 id="hi">JS 초보에요</h1>
-  <h1 id="font">폰트 사이즈 줄이기</h1>
-
+  <div class="alert-box" id="alert">
+    알림창
+    <button onclick="alertClose()">닫기</button>
+  </div>
+  <button onclick="alertOpen()">버튼</button>
+  
   <script>
-    document.getElementById('hello').innerHTML = '안녕';
-    document.getElementById('hi').innerHTML = 'JS 고수에요';
-    document.getElementById('font').style.fontSize = "16px";
+
+    function alertOpen(){
+      document.getElementById('alert').style.display = 'block';
+    }
+
+    function alertClose(){
+      document.getElementById('alert').style.display = 'none';
+    }
 
   </script>
-  
+
 </body>
 </html>
