--- a/level-1(again)/project1/index.html
+++ b/level-1(again)/project1/index.html
@@ -35,7 +35,7 @@
     </div>
   </nav>
 
-  <ul class="list-group">
+  <ul class="list-group show-list">
     <li class="list-group-item">An item</li>
     <li class="list-group-item">A second item</li>
     <li class="list-group-item">A third item</li>
