--- a/level-1(again)/project1/index.html
+++ b/level-1(again)/project1/index.html
@@ -22,9 +22,37 @@
   <div class="black-bg">
     <div class="white-bg">
       <h4>로그인하세요</h4>
-      <button class="btn btn-danger" id="close">닫기</button>
+        <form action="../project1/success.html">
+          <div class="my-3">
+            <input type="text" class="form-control" id="email">
+           </div>
+           <div class="my-3">
+             <input type="password" class="form-control" id="password">
+           </div>
+           <button type="submit" class="btn btn-primary" id="submit">전송</button>
+           <button type="button" class="btn btn-danger" id="close">닫기</button>
+        </form>
     </div>
   </div>
+
+  <script>
+
+    document.getElementById('submit').addEventListener('click', function(e){
+      if(document.getElementById('email').value == ''){
+        alert("아이디를 입력하세요");
+        e.preventDefault();
+      }
+      if(document.getElementById('password').value == ''){
+        alert("비밀번호를 입력하세요");
+        e.preventDefault();
+      }
+      if(document.getElementById('password').value.length < 6){
+        alert("비밀번호를 6자 이상 입력해주세요")
+        e.preventDefault();
+      }
+    });
+
+  </script>
 
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
@@ -35,7 +63,7 @@
     </div>
   </nav>
 
-  <ul class="list-group show-list">
+  <ul class="list-group">
     <li class="list-group-item">An item</li>
     <li class="list-group-item">A second item</li>
     <li class="list-group-item">A third item</li>
@@ -43,21 +71,24 @@
     <li class="list-group-item">And a fifth one</li>
   </ul>
 
-  <button id="login">로그인</button>
+  <div class="main-bg">
+    <h4>모자 판매</h4>
+    <button id="login" class="btn btn-danger">로그인</button>
+  </div>
 
   <script>
 
     document.querySelector('.navbar-toggler').addEventListener('click', function () {
       document.querySelectorAll('.list-group')[0].classList.toggle('show');
-    })
+    });
 
     $('#login').on('click', function(){
       $('.black-bg').addClass('show-modal');
-    })
+    });
 
     $('#close').on('click', function(){
       $('.black-bg').removeClass('show-modal');
-    })
+    });
 
   </script>
 
