input, change 이벤트

--- a/level-1(again)/project1/index.html
+++ b/level-1(again)/project1/index.html
@@ -36,6 +36,10 @@
   </div>
 
   <script>
+    // input, change <input> 안에 뭔가 입력할 때 발생하는 이벤트
+    // document.getElementById('email').addEventListener('input', function(){
+    //   console.log('반갑습니다');
+    // }); 
 
     document.getElementById('submit').addEventListener('click', function(e){
       if(document.getElementById('email').value == ''){
