--- a/level-1(again)/project1/index.html
+++ b/level-1(again)/project1/index.html
@@ -36,10 +36,23 @@
   </div>
 
   <script>
+
     // input, change <input> 안에 뭔가 입력할 때 발생하는 이벤트
     // document.getElementById('email').addEventListener('input', function(){
     //   console.log('반갑습니다');
-    // }); 
+    // });
+
+    function 삼육구게임(num) {
+      if(num % 9 == 0){
+        console.log('박수x2');
+      } else if(num % 3 == 0){
+        console.log('박수');
+      } else {
+        console.log('통과');
+      }
+    }
+
+    삼육구게임(18);
 
     document.getElementById('submit').addEventListener('click', function(e){
       if(document.getElementById('email').value == ''){
