var, let, const 공부

--- a/level-1(again)/project1/index.html
+++ b/level-1(again)/project1/index.html
@@ -66,6 +66,17 @@
 
   <script>
 
+    var 이름 = 'kim'; 
+    // 재선언 o, 재할당 o, 범위 Function-scoped
+    let 나이 = 23;
+    // 재선언 x, 재할당 o, 범위 {Block-scoped}
+    const 주소 = "서울시";
+    // 재선언 x, 재할당 x, 범위 {Block-scoped}
+
+
+
+
+
     var badge_count = 0;
 
     document.querySelector('.badge').addEventListener('click', function(){
