--- a/level-1(again)/project1/index.html
+++ b/level-1(again)/project1/index.html
@@ -66,18 +66,6 @@
 
   <script>
 
-    var first = 360;
-    var total = 0;
-
-    second = first / 1.5;
-    third = second / 1.5;
-    last = first + second + third;
-
-    console.log(last);
-
-
-
-
     var badge_count = 0;
 
     document.querySelector('.badge').addEventListener('click', function(){
@@ -121,6 +109,26 @@
 
     $('#close').on('click', function(){
       $('.black-bg').removeClass('show-modal');
+    });
+
+  </script>
+
+  <p>태조 이성계가 태어난 년도는?</p>
+  <input type="text" id="answer">
+  <button id="send-answer">제출</button>
+
+  <script>
+
+    var count = 0;
+
+    document.getElementById('send-answer').addEventListener('click', function(){
+      count += 1;
+      var user_answer = document.getElementById('answer').value;
+      if(user_answer == '1335'){
+        alert('정답입니다.');
+      } else if (count >= 3 && user_answer != '1335'){
+        alert('틀렸습니다.');
+      }
     });
 
   </script>
