스크롤 이벤트 연습

--- a/level-2/project/index.html
+++ b/level-2/project/index.html
@@ -74,6 +74,18 @@
 
   <script>
 
+    window.addEventListener('scroll', function(){
+      if(window.scrollY >= 100){
+        document.querySelector('.navbar-brand').style.fontSize = "25px";
+      } else {
+        document.querySelector('.navbar-brand').style.fontSize = "30px";
+      }
+    });
+
+  </script>
+
+  <script>
+
     var badge_count = 0;
 
     document.querySelector('.badge').addEventListener('click', function(){
@@ -101,6 +113,25 @@
     <h4>모자 판매</h4>
     <button id="login" class="btn btn-danger">로그인</button>
   </div>
+
+  <div class='lorem' style="width: 200px; height: 100px; overflow-y: scroll">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae voluptas voluptatum minus praesentium fugit debitis at, laborum ipsa itaque placeat sit, excepturi eius. Nostrum perspiciatis, eligendi quae consectetur praesentium exercitationem.
+  </div>
+
+  <script>
+    
+    document.querySelector('.lorem').addEventListener('scroll', function(){
+      var 스크롤양 = document.querySelector('.lorem').scrollTop;
+      var 실제높이 = document.querySelector('.lorem').scrollHeight;
+      var 높이 = document.querySelector('.lorem').clientHeight;
+      if(스크롤양 + 높이 == 실제높이){
+        alert('약관 다 읽으셨군요');
+      }
+    });
+
+  </script>
+
+  <div style="height: 1000px;"></div>
 
   <div class="alert alert-danger">
     <span id="num">5</span>초 이내 구매시 사은품 증정!
