페이지 스크롤 인디케이터 연습

--- a/level-2/project/index.html
+++ b/level-2/project/index.html
@@ -19,6 +19,10 @@
 
 <body id="body-color">
 
+  <div class="wrap">
+    <div class="content"></div>
+    <div id="progressbar" class="progressbar"><div class="progress"></div></div>
+
   <div class="black-bg">
     <div class="white-bg">
       <h4>로그인하세요</h4>
@@ -128,6 +132,25 @@
         alert('약관 다 읽으셨군요');
       }
     });
+
+    window.addEventListener('DOMContentLoaded', function(){
+    //스크롤 이벤트 처리
+      window.addEventListener("scroll", function(event){
+        if(document.querySelector('.progressbar') != null)setProgress();
+      });
+    });
+
+    function setProgress() {          
+      let currY = document.documentElement.scrollTop;//스크롤한 높이
+      let totalY = document.documentElement.scrollHeight - document.documentElement.clientHeight;//전체 높이
+     let percentage = (currY / totalY) * 100;//퍼센트 값
+    document.querySelector(".progress").style.width = percentage + "%";//프로그래스바 너비 변경
+    }
+
+    // document.querySelector('html').scrollHeight
+    // document.querySelector('html').clientHeight
+    // document.querySelector('html').scrollTop
+    // window.scrollY
 
   </script>
 
