함수 만들기1

--- a/level-2/project/index.html
+++ b/level-2/project/index.html
@@ -175,6 +175,18 @@
     }, 1000);
 
   </script>
+
+  <script>
+
+   console.log(ms(2, 10))
+
+   function ms(a,b){
+    var result = (a * 60 + b) * 1000;
+    return result
+  }
+
+  </script>
+
   <div style="overflow: hidden;">
     <div class="slide-container">
       <div class="slide-box">
