데이터바인딩 for문 사용

--- a/level-3/project/list.html
+++ b/level-3/project/list.html
@@ -22,7 +22,7 @@
     <div class="card">
       <img src="https://via.placeholder.com/600">
       <div class="card-body">
-        <h5>Card title</h5>
+        <h5 class="title-name">Card title</h5>
         <p>가격 : 70000</p>
         <button class="btn btn-danger">주문하기</button>
       </div>
@@ -30,7 +30,7 @@
     <div class="card">
       <img src="https://via.placeholder.com/600">
       <div class="card-body">
-        <h5>Card title</h5>
+        <h5 class="title-name">Card title</h5>
         <p>가격 : 70000</p>
         <button class="btn btn-danger">주문하기</button>
       </div>
@@ -38,7 +38,7 @@
     <div class="card">
       <img src="https://via.placeholder.com/600">
       <div class="card-body">
-        <h5>Card title</h5>
+        <h5 class="title-name">Card title</h5>
         <p>가격 : 70000</p>
         <button class="btn btn-danger">주문하기</button>
       </div>
@@ -52,14 +52,20 @@
       { id : 2, price : 60000, title : 'Black Monastery' }
     ];
 
-    document.querySelectorAll('.card-body h5')[0].innerHTML = products[0].title;
-    document.querySelectorAll('.card-body p')[0].innerHTML = '가격 : ' + products[0].price;
-
-    document.querySelectorAll('.card-body h5')[1].innerHTML = products[1].title;
-    document.querySelectorAll('.card-body p')[1].innerHTML = '가격 : ' + products[1].price;
+    var title = document.querySelectorAll('.title-name');
+    for(let i = 0; i < title.length; i++){
+      document.querySelectorAll('.card-body h5')[i].innerHTML = products[i].title;
+      document.querySelectorAll('.card-body p')[i].innerHTML = '가격 : ' + products[i].price;
+    }
     
-    document.querySelectorAll('.card-body h5')[2].innerHTML = products[2].title;
-    document.querySelectorAll('.card-body p')[2].innerHTML = '가격 : ' + products[2].price;
+    // document.querySelectorAll('.card-body h5')[0].innerHTML = products[0].title;
+    // document.querySelectorAll('.card-body p')[0].innerHTML = '가격 : ' + products[0].price;
+
+    // document.querySelectorAll('.card-body h5')[1].innerHTML = products[1].title;
+    // document.querySelectorAll('.card-body p')[1].innerHTML = '가격 : ' + products[1].price;
+
+    // document.querySelectorAll('.card-body h5')[2].innerHTML = products[2].title;
+    // document.querySelectorAll('.card-body p')[2].innerHTML = '가격 : ' + products[2].price;
 
   </script>   
 
