--- a/level-3/project/detail.html
+++ b/level-3/project/detail.html
@@ -9,7 +9,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link href="../project/main.css" rel="stylesheet">
+  <!-- <link href="../project/main.css" rel="stylesheet"> -->
 
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"
     integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
@@ -56,6 +56,9 @@
     .show {
       display: block;
     }
+    .size-hide {
+      display: none;
+    }
   </style>
 
   <div class="container mt-3">
@@ -72,6 +75,37 @@
     // document.getElementById('name').innerHTML = car2.name;
     // document.getElementById('price').innerHTML = car2.price;
     
+  </script>
+
+  <form class="container my-5 form-group">
+    <p>상품선택</p>
+    <select class="form-select mt-2">
+      <option>모자</option>
+      <option>셔츠</option>
+    </select>
+    <select class="form-select mt-2 size-hide">
+      <option>95</option>
+      <option>100</option>
+      <option>105</option>
+    </select>
+  </form>
+
+  <script>
+
+    document.querySelectorAll('.form-select')[0].addEventListener('input', function(){
+      var value = this.value;
+      if(value == '셔츠'){
+        document.querySelectorAll('.form-select')[1].classList.remove('size-hide');
+      }
+    });
+
+    document.querySelectorAll('.form-select')[0].addEventListener('input', function(){
+      var value = this.value;
+      if(value == '모자'){
+        document.querySelectorAll('.form-select')[1].classList.add('size-hide');
+      }
+    });
+
   </script>
   
   <div class="container mt-5">
