--- a/level-3/project/detail.html
+++ b/level-3/project/detail.html
@@ -123,6 +123,12 @@
     //   console.log(obj[key]);
     // }
 
+    for (var i=2; i<=9; i++){
+      for(var j=1; j<=9; j++){
+        console.log(i*j);
+      }
+    }
+
   </script>
   
   <div class="container mt-5">
