--- a/level-3/project/list.html
+++ b/level-3/project/list.html
@@ -57,17 +57,28 @@
       document.querySelectorAll('.card-body h5')[i].innerHTML = products[i].title;
       document.querySelectorAll('.card-body p')[i].innerHTML = '가격 : ' + products[i].price;
     }
-    
-    // document.querySelectorAll('.card-body h5')[0].innerHTML = products[0].title;
-    // document.querySelectorAll('.card-body p')[0].innerHTML = '가격 : ' + products[0].price;
 
-    // document.querySelectorAll('.card-body h5')[1].innerHTML = products[1].title;
-    // document.querySelectorAll('.card-body p')[1].innerHTML = '가격 : ' + products[1].price;
+  </script>
 
-    // document.querySelectorAll('.card-body h5')[2].innerHTML = products[2].title;
-    // document.querySelectorAll('.card-body p')[2].innerHTML = '가격 : ' + products[2].price;
+  <script>
 
-  </script>   
+    $.get('https://codingapple1.github.io/price.json')
+      .done(function(data){
+        console.log(data);
+      }).fail(function(){
+        console.log('실패함');
+      });
+
+    fetch('https://codingapple1.github.io/price.json')
+      .then(res => res.json())
+      .then(function(data){
+        console.log(data)
+      })
+      .catch(function(error){
+        console.log('실패함')
+      });
+
+  </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
