--- a/level-3/project/list.html
+++ b/level-3/project/list.html
@@ -18,30 +18,21 @@
 
 <body>
 
-  <div class="card-group container">
-    <div class="card">
-      <img src="https://via.placeholder.com/600">
-      <div class="card-body">
-        <h5 class="title-name">Card title</h5>
-        <p>가격 : 70000</p>
-        <button class="btn btn-danger">주문하기</button>
-      </div>
-    </div>
-    <div class="card">
-      <img src="https://via.placeholder.com/600">
-      <div class="card-body">
-        <h5 class="title-name">Card title</h5>
-        <p>가격 : 70000</p>
-        <button class="btn btn-danger">주문하기</button>
-      </div>
-    </div>
-    <div class="card">
-      <img src="https://via.placeholder.com/600">
-      <div class="card-body">
-        <h5 class="title-name">Card title</h5>
-        <p>가격 : 70000</p>
-        <button class="btn btn-danger">주문하기</button>
-      </div>
+  <style>
+    .btn-hide{
+      display: none;
+    }
+  </style>
+
+  <div class="container">
+    <div class="row">
+  
+        <!-- <div class="col-sm-4">
+          <img src="https://via.placeholder.com/600" class="w-100">
+          <h5>Card title</h5>
+          <p>가격 : 70000</p>
+        </div> -->
+  
     </div>
   </div>
   
@@ -52,33 +43,67 @@
       { id : 2, price : 60000, title : 'Black Monastery' }
     ];
 
-    var title = document.querySelectorAll('.title-name');
-    for(let i = 0; i < title.length; i++){
-      document.querySelectorAll('.card-body h5')[i].innerHTML = products[i].title;
-      document.querySelectorAll('.card-body p')[i].innerHTML = '가격 : ' + products[i].price;
-    }
+    products.forEach(function(a, i){
+    var card =
+    `<div class="col-sm-4">
+      <img src="https://via.placeholder.com/600" class="w-100">
+      <h5>${a.title}</h5>
+      <p>가격 : ${a.price}</p>
+    </div>`;
+    document.querySelector('.row').insertAdjacentHTML('beforeend', card);
+    });
 
   </script>
+
+  <div class="container">
+    <button class="btn btn-danger" id="more">더보기</button>
+  </div>
 
   <script>
 
-    $.get('https://codingapple1.github.io/price.json')
-      .done(function(data){
-        console.log(data);
-      }).fail(function(){
-        console.log('실패함');
-      });
-
-    fetch('https://codingapple1.github.io/price.json')
-      .then(res => res.json())
-      .then(function(data){
-        console.log(data)
-      })
-      .catch(function(error){
-        console.log('실패함')
-      });
+    var count = 0;
+    document.getElementById('more').addEventListener('click', function(){
+      count = count + 1;
+      if(count == 1){
+        fetch('https://codingapple1.github.io/js/more1.json')
+          .then(res => res.json())
+          .then(function(data){
+            data.forEach(function(a, i){
+            var card =
+            `<div class="col-sm-4">
+              <img src="https://via.placeholder.com/600" class="w-100">
+              <h5>${a.title}</h5>
+              <p>가격 : ${a.price}</p>
+            </div>`;
+            document.querySelector('.row').insertAdjacentHTML('beforeend', card);
+            });
+          });
+      }
+      else if(count == 2){
+        fetch('https://codingapple1.github.io/js/more2.json')
+          .then(res => res.json())
+          .then(function(data){
+            data.forEach(function(a, i){
+            var card =
+            `<div class="col-sm-4">
+              <img src="https://via.placeholder.com/600" class="w-100">
+              <h5>${a.title}</h5>
+              <p>가격 : ${a.price}</p>
+            </div>`;
+            document.querySelector('.row').insertAdjacentHTML('beforeend', card);
+            });
+          });
+      }
+    });
 
   </script>
+
+
+
+
+
+
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
