sort, map, filter 함수

--- a/level-3/project/list.html
+++ b/level-3/project/list.html
@@ -35,6 +35,10 @@
   
     </div>
   </div>
+
+  <div class="container my-3">
+    <button class="btn btn-danger" id="price">가격 순 정렬</button>
+  </div>
   
   <script>
     var products = [
@@ -42,15 +46,53 @@
       { id : 1, price : 50000, title : 'Springfield Shirt' },
       { id : 2, price : 60000, title : 'Black Monastery' }
     ];
+    
+    document.querySelector('#price').addEventListener('click', function(){
+      products.sort(function(a, b){
+        return a.price - b.price;
+      });
+
+      document.querySelector('.row').innerHTML = '';
+
+      products.forEach(function(a, i){
+        var card =
+        `<div class="col-sm-4">
+          <img src="https://via.placeholder.com/600" class="w-100">
+          <h5>${products[i].title}</h5>
+          <p>가격 : ${products[i].price}</p>
+        </div>`;
+        document.querySelector('.row').insertAdjacentHTML('beforeend', card);
+      });
+
+    });
+
+    var array = [7,3,5,2,40];
+
+    array.sort(function(a, b){
+      return a - b;
+    });
+    console.log(array);
+
+    var array2 = [7,3,5,2,40];
+
+    var new_array = array2.filter(function(a){
+      return a > 4;
+    });
+    console.log(new_array);
+
+    var new_array2 = array2.map(function(a){
+      return a * 1000;
+    });
+    console.log(new_array2);
 
     products.forEach(function(a, i){
-    var card =
-    `<div class="col-sm-4">
-      <img src="https://via.placeholder.com/600" class="w-100">
-      <h5>${a.title}</h5>
-      <p>가격 : ${a.price}</p>
-    </div>`;
-    document.querySelector('.row').insertAdjacentHTML('beforeend', card);
+      var card =
+      `<div class="col-sm-4">
+        <img src="https://via.placeholder.com/600" class="w-100">
+        <h5>${a.title}</h5>
+        <p>가격 : ${a.price}</p>
+      </div>`;
+      document.querySelector('.row').insertAdjacentHTML('beforeend', card);
     });
 
   </script>
@@ -69,13 +111,13 @@
           .then(res => res.json())
           .then(function(data){
             data.forEach(function(a, i){
-            var card =
-            `<div class="col-sm-4">
-              <img src="https://via.placeholder.com/600" class="w-100">
-              <h5>${a.title}</h5>
-              <p>가격 : ${a.price}</p>
-            </div>`;
-            document.querySelector('.row').insertAdjacentHTML('beforeend', card);
+              var card =
+              `<div class="col-sm-4">
+                <img src="https://via.placeholder.com/600" class="w-100">
+                <h5>${a.title}</h5>
+                <p>가격 : ${a.price}</p>
+              </div>`;
+              document.querySelector('.row').insertAdjacentHTML('beforeend', card);
             });
           });
       }
@@ -84,13 +126,13 @@
           .then(res => res.json())
           .then(function(data){
             data.forEach(function(a, i){
-            var card =
-            `<div class="col-sm-4">
-              <img src="https://via.placeholder.com/600" class="w-100">
-              <h5>${a.title}</h5>
-              <p>가격 : ${a.price}</p>
-            </div>`;
-            document.querySelector('.row').insertAdjacentHTML('beforeend', card);
+              var card =
+              `<div class="col-sm-4">
+                <img src="https://via.placeholder.com/600" class="w-100">
+                <h5>${a.title}</h5>
+                <p>가격 : ${a.price}</p>
+              </div>`;
+              document.querySelector('.row').insertAdjacentHTML('beforeend', card);
             });
           });
       }
