--- a/level-3/project/list.html
+++ b/level-3/project/list.html
@@ -66,25 +66,6 @@
 
     });
 
-    var array = [7,3,5,2,40];
-
-    array.sort(function(a, b){
-      return a - b;
-    });
-    console.log(array);
-
-    var array2 = [7,3,5,2,40];
-
-    var new_array = array2.filter(function(a){
-      return a > 4;
-    });
-    console.log(new_array);
-
-    var new_array2 = array2.map(function(a){
-      return a * 1000;
-    });
-    console.log(new_array2);
-
     products.forEach(function(a, i){
       var card =
       `<div class="col-sm-4">
@@ -93,6 +74,66 @@
         <p>가격 : ${a.price}</p>
       </div>`;
       document.querySelector('.row').insertAdjacentHTML('beforeend', card);
+    });
+
+  </script>
+
+  <div class="container my-3">
+    <button class="btn btn-danger" id="sort-au">상품명 다나가순 정렬</button>
+  </div>
+
+  <script>
+
+    document.querySelector('#sort-au').addEventListener('click', function(){
+      products.sort(function(a, b){
+        if(a.title > b.title) {
+          return - 1;
+        } else if (b.title > a.title) {
+          return 1;
+        } else return 0;
+      });
+
+      document.querySelector('.row').innerHTML = '';
+
+      products.forEach(function(a, i){
+        var card =
+        `<div class="col-sm-4">
+          <img src="https://via.placeholder.com/600" class="w-100">
+          <h5>${products[i].title}</h5>
+          <p>가격 : ${products[i].price}</p>
+        </div>`;
+        document.querySelector('.row').insertAdjacentHTML('beforeend', card);
+      });
+      
+    });
+
+    document.querySelector('#sort-au').addEventListener('click', function(){
+
+    });
+        
+  </script>
+
+  <div class="container my-3">
+    <button class="btn btn-danger" id="filter">6만원 이하 상품만 보기</button>
+  </div>
+
+  <script>
+
+    document.querySelector('#filter').addEventListener('click', function(){
+      var newProduct = products.filter((a) => a.price <= 60000);
+
+      document.querySelector('.row').innerHTML = '';
+
+      newProduct.forEach(function(a, i){
+        var card =
+        `<div class="col-sm-4">
+          <img src="https://via.placeholder.com/600" class="w-100">
+          <h5>${newProduct[i].title}</h5>
+          <p>가격 : ${newProduct[i].price}</p>
+        </div>`;
+        document.querySelector('.row').insertAdjacentHTML('beforeend', card);
+      });
+
     });
 
   </script>
