localStorage, sessionStorage 공부

--- a/level-3/project/list.html
+++ b/level-3/project/list.html
@@ -66,15 +66,33 @@
 
     });
 
+    
+
     products.forEach(function(a, i){
       var card =
       `<div class="col-sm-4">
         <img src="https://via.placeholder.com/600" class="w-100">
         <h5>${a.title}</h5>
         <p>가격 : ${a.price}</p>
+        <button class="buy">구매</button>
       </div>`;
       document.querySelector('.row').insertAdjacentHTML('beforeend', card);
     });
+
+    // localStorage.setItem('이름', 'kim');
+    // localStorage.getItem('이름');
+    // localStorage.removeItem('이름');
+    
+    var arr = [1,2,3];
+    var newArr = JSON.stringify(arr);
+
+    localStorage.setItem('num', newArr);
+    var 꺼낸거1 = localStorage.getItem('num');
+    console.log(JSON.parse(꺼낸거1)[0]);
+
+    sessionStorage.setItem('num', newArr);
+    var 꺼낸거2 = sessionStorage.getItem('num');
+    console.log(JSON.parse(꺼낸거1)[1]);
 
   </script>
 
