--- a/level-3/project/list.html
+++ b/level-3/project/list.html
@@ -92,7 +92,7 @@
     var buyClass = document.querySelectorAll('.buy');
 
     for(let i=0; i<buyClass.length; i++){
-      document.querySelectorAll('.buy')[i].addEventListener('click', cartBuy);
+      buyClass[i].addEventListener('click', cartBuy);
     }
 
   </script>
