--- a/level-3/project/list.html
+++ b/level-3/project/list.html
@@ -41,7 +41,7 @@
   </div>
   
   <script>
-    var products = [
+    const products = [
       { id : 0, price : 70000, title : 'Blossom Dress' },
       { id : 1, price : 50000, title : 'Springfield Shirt' },
       { id : 2, price : 60000, title : 'Black Monastery' }
@@ -55,7 +55,7 @@
       document.querySelector('.row').innerHTML = '';
 
       products.forEach(function(a, i){
-        var card =
+        const card =
         `<div class="col-sm-4">
           <img src="https://via.placeholder.com/600" class="w-100">
           <h5>${products[i].title}</h5>
@@ -67,7 +67,7 @@
     });
 
     products.forEach(function(a, i){
-      var card =
+      const card =
       `<div class="col-sm-4">
         <img src="https://via.placeholder.com/600" class="w-100">
         <h5>${a.title}</h5>
@@ -78,18 +78,35 @@
     });
 
     function cartBuy(e){
-      var title = e.target.previousElementSibling.previousElementSibling.innerHTML;
+      const title = e.target.previousElementSibling.previousElementSibling.innerHTML;
+
       if (localStorage.getItem('cart') != null){
-        var 꺼낸거 = JSON.parse(localStorage.getItem('cart'));
-        꺼낸거.push(title);
+        const 꺼낸거 = JSON.parse(localStorage.getItem('cart'));
+        // 꺼낸거 <- array / object
+        const count = 0;
+        const index = 꺼낸거.findIndex((element) => element.title === title);
+        if (index === -1) { //
+          const element = {
+            title,
+            count: 1
+          }
+          꺼낸거.push(element);
+        } else {
+          꺼낸거[index].count++;
+        }
         localStorage.setItem('cart', JSON.stringify(꺼낸거));
       }
       else {
-        localStorage.setItem('cart', JSON.stringify([title]));
+        localStorage.setItem('cart', JSON.stringify([
+          {
+            title,
+            count: 1
+          }
+        ]));
       }
     }
 
-    var buyClass = document.querySelectorAll('.buy');
+    const buyClass = document.querySelectorAll('.buy');
 
     for(let i=0; i<buyClass.length; i++){
       buyClass[i].addEventListener('click', cartBuy);
@@ -115,7 +132,7 @@
       document.querySelector('.row').innerHTML = '';
 
       products.forEach(function(a, i){
-        var card =
+        const card =
         `<div class="col-sm-4">
           <img src="https://via.placeholder.com/600" class="w-100">
           <h5>${products[i].title}</h5>
@@ -139,12 +156,12 @@
   <script>
 
     document.querySelector('#filter').addEventListener('click', function(){
-      var newProduct = products.filter((a) => a.price <= 60000);
+      const newProduct = products.filter((a) => a.price <= 60000);
 
       document.querySelector('.row').innerHTML = '';
 
       newProduct.forEach(function(a, i){
-        var card =
+        const card =
         `<div class="col-sm-4">
           <img src="https://via.placeholder.com/600" class="w-100">
           <h5>${newProduct[i].title}</h5>
@@ -163,7 +180,7 @@
 
   <script>
 
-    var count = 0;
+    const count = 0;
     document.getElementById('more').addEventListener('click', function(){
       count = count + 1;
       if(count == 1){
@@ -171,7 +188,7 @@
           .then(res => res.json())
           .then(function(data){
             data.forEach(function(a, i){
-              var card =
+              const card =
               `<div class="col-sm-4">
                 <img src="https://via.placeholder.com/600" class="w-100">
                 <h5>${a.title}</h5>
@@ -186,7 +203,7 @@
           .then(res => res.json())
           .then(function(data){
             data.forEach(function(a, i){
-              var card =
+              const card =
               `<div class="col-sm-4">
                 <img src="https://via.placeholder.com/600" class="w-100">
                 <h5>${a.title}</h5>
